# electron-rust-terminal-emulator

./: .gitignore  package.json
native/: Cargo.toml  build.rs
native/backend/: Cargo.toml
native/backend/src/: lib.rs
native/src/: lib.rs
public/: index.html
src/: App.js
